--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,11 @@
 .home-header-container {
-  height : 60px;
-  width  : 100%;
-  padding: 0 40px;
+  height          : 60px;
+  width           : 100%;
+  padding         : 0 40px;
+  position        : sticky;
+  top             : 0;
+  background-color: white;
+  z-index         : 10000;
 
   .home-header-content {
     width  : 100%;
@@ -71,7 +75,8 @@
             color: orange;
           }
         }
-        &:hover{
+
+        &:hover {
           opacity: 0.8;
         }
       }
@@ -89,7 +94,8 @@
 
           }
         }
-        &:hover{
+
+        &:hover {
           opacity: 0.8;
         }
       }
@@ -156,6 +162,7 @@
 
   .content-down {
     height          : 35%;
+    padding-bottom  : 10px;
     display         : flex;
     align-items     : flex-end;
     justify-content : center;
