--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -31,6 +31,10 @@
     }
 }
 
+.slick-disabled {
+    display: none !important;
+}
+
 .section-share {
     &.section-specialty {
         background: #f5f5f5;
@@ -67,9 +71,9 @@
 
                 &.section-outstanding-doctor {
                     //background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
-                    width           : 120px;
-                    height          : 120px;
-                    border-radius   : 50%;
+                    width        : 120px;
+                    height       : 120px;
+                    border-radius: 50%;
                 }
 
                 &.section-handbook {
@@ -132,6 +136,7 @@
 
     .section-customize {
         padding: 5px;
+        cursor : pointer;
 
         .customize-border {
             border : 1px solid orange;
@@ -172,8 +177,8 @@
 
             p {
                 text-align: justify;
-                font-style: italic; 
-                padding: 15px;
+                font-style: italic;
+                padding   : 15px;
             }
         }
     }
