--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,19 +1,19 @@
 .doctor-detail-container {
     height: 500px;
-    margin: 0 100px;
-    border: 1px solid red;
+
+
 
     .intro-doctor {
         display: flex;
-        border: 1px solid grey;
+        margin : 0 100px;
 
         .content-left {
-            width : 20%;
-           background: center center no-repeat;
-           width: 120px;
-           height: 120px;
-           border-radius: 50%;
-           margin: 10px 20px;
+            width        : 20%;
+            background   : center center no-repeat;
+            width        : 120px;
+            height       : 120px;
+            border-radius: 50%;
+            margin       : 10px 20px;
         }
 
         .content-right {
@@ -32,5 +32,24 @@
                 padding-top: 10px;
             }
         }
+    }
+
+    .detail-infor-doctor {
+        border-top      : 1px solid #ddd;
+        border-bottom   : 1px solid #ddd;
+        background-color: #f9f9f9;
+        padding         : 10px 100px;
+
+        h3 {
+            font-size: 17px;
+        }
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .comment-doctor {
+        height: 50px;
     }
 }
