--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -9,19 +9,28 @@
     }
 
     .pick-hour-container {
-        padding-top: 20px ;
+        padding-top   : 20px;
         padding-bottom: 20px;
-        display  : flex;
-        gap      : 20px;
-        flex-wrap: wrap;
+        display       : flex;
+        gap           : 20px;
+        flex-wrap     : wrap;
 
         button {
             padding: 5px 15px;
-            border: 1px solid grey;
+            border : 1px solid grey;
         }
     }
 
-    .btn-save-schedule{
-margin-top: 20px;
+    .btn-schedule {
+
+        &.active {
+            background-color: orange;
+        }
+    }
+
+    .btn-save-schedule {
+        margin-top: 20px;
+
+
     }
 }
